--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,47 +21,14 @@
                     <div class="mb-lg-n16">
                         <div class="card border-0 tab-shadow">
                             <div class="card-body">
-                                <form class="js-validate" action="/property-list">
+                                <form class="js-validate" action="/property-list" method="POST">
                                   <div class="row d-block nav-select d-lg-flex mb-lg-3 px-2 px-lg-3">
                                     <div class="col-sm-12 col-lg-3dot6 col-xl-3dot7 mb-4 mb-lg-0 ">
                                         <span class="d-block text-gray-1 font-weight-normal text-left mb-0">Destination</span>
                                         <!-- Select -->
-                                        <select class="js-select selectpicker dropdown-select tab-dropdown col-12 pl-0 flaticon-pin-1 d-flex align-items-center text-primary font-weight-semi-bold" title="Where are you going?"
-                                            data-style=""
-                                            data-live-search="true"
-                                            data-searchbox-classes="input-group-sm"
-                                        id="search-property">
-                                            <option class="border-bottom border-color-1" value="project1" data-content='
-                                                <span class="d-flex align-items-center">
-                                                    <span class="font-size-16">London, United Kingdom</span>
-                                                </span>'>
-                                                London, United Kingdom
-                                            </option>
-                                            <option class="border-bottom border-color-1" value="project2" data-content='
-                                                <span class="d-flex align-items-center">
-                                                    <span class="font-size-16">New York, United States</span>
-                                                </span>'>
-                                                New York, United States
-                                            </option>
-                                            <option  class="border-bottom border-color-1" value="project3" data-content='
-                                                <span class="d-flex align-items-center">
-                                                    <span class="font-size-16">New South Wales, Australia</span>
-                                                </span>'>
-                                                New South Wales, Australia
-                                            </option>
-                                            <option class="border-bottom border-color-1" value="project4" data-content='
-                                                <span class="d-flex align-items-center">
-                                                    <span class="font-size-16">Istanbul, Turkey</span>
-                                                </span>'>
-                                                Istanbul, Turkey
-                                            </option>
-                                            <option class="" value="project4" data-content='
-                                                <span class="d-flex align-items-center">
-                                                    <span class="font-size-16">Reykjavík, Iceland</span>
-                                                </span>'>
-                                                Reykjavík, Iceland
-                                            </option>
-                                        </select>
+                                        
+                                            <input class="form-control" type="text" id="location" name= "location" placeholder="AnyWhere" />
+                                        
                                         <!-- End Select -->
                                     </div>
 
