--- a/views/property-details - Sudha Working.ejs
+++ b/views/property-details - Sudha Working.ejs
@@ -29,12 +29,12 @@
                         <div class="d-block d-md-flex flex-center-between align-items-start mb-3">
                             <div class="mb-3">
                                 <div class="d-block d-md-flex flex-horizontal-center mb-2 mb-md-0">
-                                    <h4 class="font-size-23 font-weight-bold mb-1 mr-3"><%= PropertyDetails.rentalname%></h4>
+                                    <!-- <h4 class="font-size-23 font-weight-bold mb-1 mr-3"><%= PropertyDetails.rentalname%></h4> -->
                                 </div>
                                 <div class="d-block d-md-flex flex-horizontal-center font-size-14 text-gray-1">
-                                    <i class="icon flaticon-placeholder mr-2 font-size-20"></i> <%= PropertyDetails.city%>,
+                                    <!-- <i class="icon flaticon-placeholder mr-2 font-size-20"></i> <%= PropertyDetails.city%>,
                                     <%= PropertyDetails.state%>,<%= PropertyDetails.country%>
-                                    <a href="#" class="ml-1 d-block d-md-inline"> - View on map</a>
+                                    <a href="#" class="ml-1 d-block d-md-inline"> - View on map</a> -->
                                 </div>
                             </div>
                             <ul class="list-group list-group-borderless list-group-horizontal custom-social-share">
@@ -47,7 +47,7 @@
                         </div>
                         <div class="py-4 border-top mb-4">
                             <ul class="mb-4 list-group list-group-borderless list-group-horizontal flex-center-between text-center flex-wrap">
-                                <li class="list-group-item text-lh-sm ">
+                                <!-- <li class="list-group-item text-lh-sm ">
                                     <i class="flaticon-plans text-primary font-size-50 mb-1 d-block"></i>
                                     <div class="text-gray-1"><%= PropertyDetails.area%>  sq ft</div>
                                 </li>
@@ -62,7 +62,7 @@
                                 <li class="list-group-item text-lh-sm ">
                                     <i class="flaticon-bed-1 text-primary font-size-50 mb-1 d-block"></i>
                                     <div class="text-gray-1"><%= PropertyDetails.beds%> beds</div>
-                                </li>
+                                </li> -->
                             </ul>
 
                             <div class="position-relative">
@@ -195,10 +195,10 @@
                             <h5 id="scroll-description" class="font-size-21 font-weight-bold text-dark">
                                 Description
                             </h5>
-                            <p><%= PropertyDetails.description%>
+                            <!-- <p><%= PropertyDetails.description%> -->
 
                             <div class="collapse" id="collapseLinkExample">
-                                <p><%= PropertyDetails.description%></p>
+                                <!-- <p><%= PropertyDetails.description%></p> -->
                             </div>
 
                             <a class="link-collapse link-collapse-custom gradient-overlay-half mb-5 d-inline-block border-bottom border-primary" data-toggle="collapse" href="#collapseLinkExample" role="button" aria-expanded="false" aria-controls="collapseLinkExample">
@@ -211,67 +211,47 @@
                                 Amenities
                             </h5>
                             <ul class="list-group list-group-borderless list-group-horizontal list-group-flush no-gutters row">
-                               <%
-                                   if (PropertyDetails.amenities.indexOf('wifi') !== -1)
-                               {%>
+                               <!-- <%if(PropertyDetails.amenities.length > 0 && PropertyDetails.amenities.indexOf("wifi") !== -1) {%>  -->
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-wifi-signal mr-3 text-primary font-size-24"></i>Wifi</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Wake-up call') !== -1)
-                               {%>
-                               
+                                <!-- }%> -->
+
+                                <!-- <%if(PropertyDetails.amenities.indexOf("Wake-up call") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-alarm mr-3 text-primary font-size-24"></i>Wake-up call</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Bathrobes') !== -1)
-                               {%>
-                                <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-bathrobe mr-3 text-primary font-size-24"></i>Bathrobes</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Fitness center') !== -1)
-                               {%>
+                                }%>
+
+                                <%if(PropertyDetails.amenities.indexOf("Wake-up call") !== -1) {%> 
+                                <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-bathrobe mr-3 text-primary font-size-24"></i>Wake-up call</li>
+                                }%>
+                                
+                                <%if(PropertyDetails.amenities.indexOf("Fitness center") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-weightlifting mr-3 text-primary font-size-24"></i>Fitness center</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Telephone') !== -1)
-                               {%>
-                                <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-phone-call mr-3 text-primary font-size-24"></i>Telephone</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Dry cleaning') !== -1)
-                               {%>
+                            }%>
+                                <%if(PropertyDetails.amenities.indexOf("Fitness center") !== -1) {%> 
+                                <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-phone-call mr-3 text-primary font-size-24"></i>Fitness center</li>
+                                }%>
+                                <%if(PropertyDetails.amenities.indexOf("Dry cleaning") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-folded-towel mr-3 text-primary font-size-24"></i>Dry cleaning</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Mini bar') !== -1)
-                               {%>
+                                }%>
+                                <%if(PropertyDetails.amenities.indexOf("wrifi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-wine-glass mr-3 text-primary font-size-24"></i>Mini bar</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Hair dryer') !== -1)
-                               {%>
+                                }%>
+                                <%if(PropertyDetails.amenities.indexOf("wvvifi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-hair-dryer mr-3 text-primary font-size-24"></i>Hair dryer</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('High chair') !== -1)
-                               {%>
+                                 } %>
+
+                                <%if(PropertyDetails.amenities.indexOf("wifvvi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-desk-chair mr-3 text-primary font-size-24"></i>High chair</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Restaurant') !== -1)
-                               {%>
+                                }%>
+                                <%if(PropertyDetails.amenities.indexOf("wifi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-hamburger mr-3 text-primary font-size-24"></i>Restaurant</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Air Conditioning') !== -1)
-                               {%>
+                                }%>
+                                <%if(PropertyDetails.amenities.indexOf("wifi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-air-conditioner mr-3 text-primary font-size-24"></i>Air Conditioning</li>
-                                <%} %>
-                                <%
-                                   if (PropertyDetails.amenities.indexOf('Slippers') !== -1)
-                               {%>
+                                 } %>
+                                <%if(PropertyDetails.amenities.indexOf("wifi") !== -1) {%> 
                                 <li class="col-md-4 mb-3 list-group-item"><i class="flaticon-slippers mr-3 text-primary font-size-24"></i>Slippers</li>
-                                <%} %>
+                                 }%> -->
+                                
                             </ul>
                         </div>
                         <div class="border-bottom py-4">
@@ -280,45 +260,12 @@
                             </h5>
                             <ul class="list-group list-group-borderless list-group-horizontal list-group-flush no-gutters row">
                                 <li class="col-md-5 mb-5 mb-md-0 list-group-item pt-0 border-bottom pb-3">
-                                    <%
-                                   if (PropertyDetails.rules.indexOf('Children allowed') !== -1)
-                               {%>
                                     <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-tick mr-3 font-size-16 text-primary"></i>Children allowed</div>
-                                    <%}
-                                   if (PropertyDetails.rules.indexOf('Smoking allowed') !== -1)
-                               {%>
-                                    <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-tick mr-3 font-size-16 text-primary"></i>Smoking allowed</div>
-                                    <%}
-                                   if (PropertyDetails.rules.indexOf('Pets allowed') !== -1)
-                               {%>
-                                    <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-tick mr-3 font-size-16 text-primary"></i>Pets allowed</div>
-                                    <%}
-                                   if (PropertyDetails.rules.indexOf('Party allowed') !== -1)
-                               {%>
-                                    <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-tick mr-3 font-size-16 text-primary"></i>Party allowed</div>
-                                    <%} %>
                                 </li>
                                 <li class="col-md-5 mb-5 mb-md-0 list-group-item pt-0 border-bottom pb-3">
-                                    <%
-                                    if (PropertyDetails.rules.indexOf('Children allowed') == -1)
-                                {%>
-                                    <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-close mr-3 font-size-12 text-primary"></i>Children allowed</div>
-                                    <%} 
-                                                                   
-                                    if (PropertyDetails.rules.indexOf('Children allowed') === -1)
-                                {%>
                                     <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-close mr-3 font-size-12 text-primary"></i>Smoking allowed</div>
-                                    <%} 
-                                   
-                                   if (PropertyDetails.rules.indexOf('Party allowed') === -1)
-                               {%>
                                     <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-close mr-3 font-size-12 text-primary"></i>Pets allowed</div>
-                                    <%}
-                                   if (PropertyDetails.rules.indexOf('Party allowed') === -1)
-                               {%>
                                     <div class="flex-horizontal-center mb-3 text-gray-1"><i class="flaticon-close mr-3 font-size-12 text-primary"></i>Party allowed</div>
-                                    <%} %>
-                                    
                                 </li>
                             </ul>
                         </div>
@@ -335,7 +282,7 @@
                                 <div class="border-bottom">
                                     <div class="p-4">
                                         <span class="font-size-14">Price</span>
-                                        <span class="font-size-24 text-gray-6 font-weight-bold ml-1">£<%= PropertyDetails.price%></span>
+                                        <span class="font-size-24 text-gray-6 font-weight-bold ml-1">£350.00</span>
                                     </div>
                                 </div>
                                 <div class="p-4">
